# pribehy_salvanie

./: README.md  app.py  pyproject.toml  races.json  run.py  skills.json
instance/: salvanie.db
salvanie_package/: __init__.py  forms.py  models.py  routes.py
salvanie_package/static/: styles.css  styles_desktop.css  styles_phone.css
salvanie_package/templates/: base.html  characters.html  following.html  home.html  images.html  manuals.html  rules.html
static/: dropdown.js  fotogalerie.html  index.html  kontakty.html  navody.html  obrazky.html  postavy.html  pravidla.html  probehle.html  slideshow.css  styles.css  styles_desktop.css  styles_phone.css  svet.html
templates/: base.html  fotogalerie.html  index.html  navody.html  postavy.html  pravidla.html  pristi.html  probehle.html  svet.html
